--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Devlar</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#">Blog</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">About</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -61,26 +61,37 @@
 
     <!-- Page Content -->
     <div class="container-fluid" >
+                <div class="dotstyle dotstyle-fillin" id="dot-container">
+                    <ul>
+                        <li class="dot current"><a></a></li>
+                        <li class="dot"><a></a></li>
+                        <li class="dot"><a></a></li>
+                        <li class="dot"><a></a></li>
+                        <li class="dot"><a></a></li>
+                        <li class="dot"><a></a></li>
+                    </ul>
+                </div>
 
         <div class="row">
                       <section class="background">
                         <div class="content-wrapper">
-                          <p class="content-title">Full Page Parallax Effect</p>
-                          <p class="content-subtitle">Scroll down and up to see the effect!</p>
+                          <p class="content-title"></p>
+                          <p class="content-subtitle"></p>
                         </div>
                       </section>
                       <section class="background">
                         <div class="content-wrapper">
-                          <p class="content-title">Cras lacinia non eros nec semper.</p>
-                          <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa mattis nibh semper pretium.</p>
+                          <p class="content-title"></p>
+                          <p class="content-subtitle"></p>
                         </div>
                       </section>
                       <section class="background">
                         <div class="content-wrapper">
-                          <p class="content-title">Etiam consequat lectus.</p>
-                          <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+                          <p class="content-title"></p>
+                          <p class="content-subtitle"></p>
                         </div>
                       </section>
+
         </div>
         <!-- /.row -->
 
