--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Fullpage CSS -->
     <link href="css/style.css" rel="stylesheet">
@@ -36,7 +37,6 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Devlar</a>
             </div>
@@ -48,9 +48,6 @@
                     </li>
                     <li>
                         <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
                     </li>
                 </ul>   
             </div>
@@ -65,7 +62,7 @@
                     <ul>
                         <li class="dot current"><a></a></li>
                         <li class="dot"><a></a></li>
-                        <li class="dot"><a></a></li>
+                         <li class="dot"><a></a></li>
                         <li class="dot"><a></a></li>
                         <li class="dot"><a></a></li>
                         <li class="dot"><a></a></li>
@@ -74,19 +71,36 @@
 
         <div class="row">
                       <section class="background">
+                      <h6 class="content-title" id="ct1">Devlar.</h1>
+                      <div id="circle1"></div>
+                      <div id="circle2"></div>
+                      <div id="circle3"></div>
+                      <img id="img1" src="img/work1.png">
+                      <p class="content-info" id="ci1">We at ^ love making things.</p>
+                        <div class="content-wrapper">                          
+                        </div>
+                      </section>
+                      <section class="background">
+                      <div id="ci2-wrapper">
+                      <p class="content-info" id="ci2"> <span id="ci2s"> Devlar - </span> is a crew of designers and developers enthusiastic about technology. We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive their design. </p></div>
                         <div class="content-wrapper">
+                        <img src="img/s8.png">
+                        </div>
+                      </section>
+                      <section class="background">
+                      <div id="drill-wrapper">
+                      <p class="drill-info" id=""> <span id="drills"> Drill - </span> <br>A community where users share a timeline of events which helped them learn a topic of their choice.
+
+                      </p></div>
+                        <div class="content-wrapper">
+                            <img id="drill" src="img/drill.png">  
                           <p class="content-title"></p>
                           <p class="content-subtitle"></p>
                         </div>
                       </section>
                       <section class="background">
-                        <div class="content-wrapper">
-                          <p class="content-title"></p>
-                          <p class="content-subtitle"></p>
-                        </div>
-                      </section>
-                      <section class="background">
-                        <div class="content-wrapper">
+                      <div class="cs-wrapper">    
+                      <img id="cs" src="img/cs.png">                   
                           <p class="content-title"></p>
                           <p class="content-subtitle"></p>
                         </div>
