--- a/index.html
+++ b/index.html
@@ -13,99 +13,100 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Fullpage CSS -->
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Fullpage Script -->
 
-
     <!-- Custom Script -->
-    
 
 </head>
 
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-fixed-top" role="navigation">
-        <div class="container-lol">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Devlar</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">Blog</a>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                </ul>   
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+	<nav class="navbar navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">
+					<img src="img/logo.png" style="margin-top: -7px;" width="30" height="30" class="d-inline-block align-top" alt="">
+				</a>
+				<a class="navbar-brand" href="#">DEVLAR</a>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav">
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">About</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- Navigation -->
 
     <!-- Page Content -->
     <div class="container-fluid" >
-                <div class="dotstyle dotstyle-fillin" id="dot-container">
-                    <ul>
-                        <li class="dot current"><a></a></li>
-                        <li class="dot"><a></a></li>
-                         <li class="dot"><a></a></li>
-                        <li class="dot"><a></a></li>
-                        <li class="dot"><a></a></li>
-                        <li class="dot"><a></a></li>
-                    </ul>
-                </div>
+
+    	<!-- Nav dots -->
+		<div class="dotstyle dotstyle-fillin" id="dot-container">
+		    <ul>
+		        <li class="dot current"><a></a></li>
+		        <li class="dot"><a></a></li>
+		        <li class="dot"><a></a></li>
+		        <li class="dot"><a></a></li>
+		        <li class="dot"><a></a></li>
+		        <li class="dot"><a></a></li>
+		    </ul>
+		</div>
+		<!-- Nav dots -->
 
         <div class="row">
-                      <section class="background">
-                      <h6 class="content-title" id="ct1">Devlar.</h1>
-                      <div id="circle1"></div>
-                      <div id="circle2"></div>
-                      <div id="circle3"></div>
-                      <img id="img1" src="img/work1.png">
-                      <p class="content-info" id="ci1">We at ^ love making things.</p>
-                        <div class="content-wrapper">                          
-                        </div>
-                      </section>
-                      <section class="background">
-                      <div id="ci2-wrapper">
-                      <p class="content-info" id="ci2"> <span id="ci2s"> Devlar - </span> is a crew of designers and developers enthusiastic about technology. We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive their design. </p></div>
-                        <div class="content-wrapper">
-                        <img src="img/s8.png">
-                        </div>
-                      </section>
-                      <section class="background">
-                      <div id="drill-wrapper">
-                      <p class="drill-info" id=""> <span id="drills"> Drill - </span> <br>A community where users share a timeline of events which helped them learn a topic of their choice.
+			<section class="background">
+				<p class="content-title" id="ct1">Devlar<span style="color: #1e76ff">.</span></p>
+				<div id="circle1"></div>
+				<div id="circle2"></div>
+				<div id="circle3"></div>
+				<img id="img1" src="img/work1.png">
+				<p class="content-info" id="ci1">We love making things.</p>
+				<div class="content-wrapper">
+				</div>
+			</section>
 
-                      </p></div>
-                        <div class="content-wrapper">
-                            <img id="drill" src="img/drill.png">  
-                          <p class="content-title"></p>
-                          <p class="content-subtitle"></p>
-                        </div>
-                      </section>
-                      <section class="background">
-                      <div class="cs-wrapper">    
-                      <img id="cs" src="img/cs.png">                   
-                          <p class="content-title"></p>
-                          <p class="content-subtitle"></p>
-                        </div>
-                      </section>
+			<section class="background">
+				<div id="ci2-wrapper">
+					<p class="content-info" id="ci2"><span style="color: white">Devlar</span> is a crew of designers and developers enthusiastic about technology. <br>We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive their design. </p>
+				</div>
+				<div class="content-wrapper">
+					<img id="s8" src="img/s8.png">
+				</div>
+			</section>
 
+			<section class="background">
+				<div id="drill-wrapper">
+					<span id="drills">Drill</span>
+					<p id="drill-info">A community where users share a timeline of events which helped them learn a topic of their choice.</p>
+					<span class="links"><a>Behance</a> · <a>GitHub</a></span>
+				</div>
+				<div class="content-wrapper">
+					<img id="drill" src="img/drill.png">
+				</div>
+			</section>
+
+			<section class="background">
+				<div id="ci2-wrapper">
+					<span id="css">Creative Space</span>
+					<p id="cs-info">Creative space is a platform for any form of creative artist or people in general to put together their portfolio and build up an audience at the same time.</p>
+					<span class="links"><a>Behance</a> · <a>GitHub</a></span>
+				</div>
+				<div class="content-wrapper">
+					<img id="cs" src="img/cs.png">
+				</div>
+			</section>
         </div>
         <!-- /.row -->
 
@@ -117,9 +118,11 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Other JavaScript -->
     <script src="js/underscore.js"></script>
     <script src="js/script.js"></script>
-    
+
 </body>
 
 </html>
