added more interactions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<a class="navbar-brand" href="#">
 					<img src="img/logo.png" style="margin-top: -7px;" width="30" height="30" class="d-inline-block align-top" alt="">
 				</a>
-				<a class="navbar-brand" href="#">DEVLAR</a>
+				<a class="navbar-brand" onclick="reset();" href="#">DEVLAR</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
@@ -53,7 +53,7 @@
     <div class="container-fluid" >
 
     	<!-- Nav dots -->
-		<div class="dotstyle dotstyle-fillin" id="dot-container">
+		<div class="dotstyle dotstyle-fillin dot-container">
 		    <ul>
 		        <li class="dot current"><a></a></li>
 		        <li class="dot"><a></a></li>
@@ -64,6 +64,11 @@
 		    </ul>
 		</div>
 		<!-- Nav dots -->
+
+		<!-- Scroll -->
+			<h5 class="scroll-inst">scroll</h4>
+		<!-- Scroll -->
+
 
         <div class="row">
 			<section class="background">
@@ -78,6 +83,7 @@
 			</section>
 
 			<section class="background">
+			 <p class="slide-info">about</p>
 				<div id="ci2-wrapper">
 					<p class="content-info" id="ci2"><span style="color: white">Devlar</span> is a crew of designers and developers enthusiastic about technology. <br>We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive their design. </p>
 				</div>
@@ -87,6 +93,7 @@
 			</section>
 
 			<section class="background">
+			<p class="slide-info">projects</p>
 				<div id="drill-wrapper">
 					<span id="drills">Drill</span>
 					<p id="drill-info">A community where users share a timeline of events which helped them learn a topic of their choice.</p>
@@ -98,6 +105,7 @@
 			</section>
 
 			<section class="background">
+			<p class="slide-info">projects</p>
 				<div id="ci2-wrapper">
 					<span id="css">Creative Space</span>
 					<p id="cs-info">Creative space is a platform for any form of creative artist or people in general to put together their portfolio and build up an audience at the same time.</p>
@@ -107,7 +115,37 @@
 					<img id="cs" src="img/cs.png">
 				</div>
 			</section>
+
+			<section class="background">
+			<p class="slide-info">projects</p>
+				<div id="ci2-wrapper">
+					<span id="css">Creative Space</span>
+					<p id="cs-info">Creative space is a platform for any form of creative artist or people in general to put together their portfolio and build up an audience at the same time.</p>
+					<span class="links"><a>Behance</a> · <a>GitHub</a></span>
+				</div>
+				<div class="content-wrapper">
+					<img id="cs" src="img/cs.png">
+				</div>
+			</section>
+
+			<section class="background">
+			<p class="slide-info">projects</p>
+				<div id="ci2-wrapper">
+					<span id="css">Creative Space</span>
+					<p id="cs-info">Creative space is a platform for any form of creative artist or people in general to put together their portfolio and build up an audience at the same time.</p>
+					<span class="links"><a>Behance</a> · <a>GitHub</a></span>
+				</div>
+				<div class="content-wrapper">
+					<img id="cs" src="img/cs.png">
+				</div>
+			</section>
+			<section class="background">
+			</section>
+
+
+
         </div>
+
         <!-- /.row -->
 
     </div>
