--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <!-- Real Shadow Script -->
     <script src="js/realshadow.js" type="text/javascript"></script>
 
-    <!-- Custom Script -->
+    <!-- Font awesome custom link -->
+    <script src="https://use.fontawesome.com/2b3901f2d9.js"></script>
 
 </head>
 
@@ -89,7 +90,7 @@
 			<section class="background">
 			 <p class="slide-info">about</p>
 				<div id="ci2-wrapper">
-					<p class="content-info" id="ci2"><span style="color: white">Devlar</span> is a crew of designers and developers enthusiastic about technology. <br>We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive their design. </p>
+					<p class="content-info" id="ci2"><span class="h1" style="color: white">Devlar</span> is a crew of designers and developers enthusiastic about technology. <br>We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive their design. </p>
 				</div>
 				<div class="content-wrapper">
 					<img id="s8" src="img/s8.png">
@@ -145,9 +146,75 @@
 			</section>
 
 			<section class="background">
+				<div class="container team-container">
+				<div class="col-xs-10 col-xs-offset-1">
+					<p class="h1 text-center">The Team</p>
+					<br><br>
+				    <div class="row">
+				        <div class="col-sm-3 col-xs-6">
+				            <div class="col-xs-12">
+				                <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
+				            </div>
+				            <div class="col-xs-12 text-center">
+				                <h3>Soumik Sur</h3>
+				                <h5>Front-end Developer</h5>
+				                <!--Facebook-->
+				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+				                <!--Twitter-->
+				                <a class="icons-sm tw-ic"><i class="fa fa-twitter"> </i></a>
+				                <!--GitHub-->
+				                <a class="icons-sm git-ic"><i class="fa fa-github"> </i></a>
+				            </div>
+				        </div>
+				        <div class="col-sm-3 col-xs-6">
+				            <div class="col-xs-12">
+			                    <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
+				            </div>
+				            <div class="col-xs-12 text-center">
+				                <h3>Yash Anand</h3>
+				                <h5>Designer & Front-end Developer</h5>
+				                <!--Facebook-->
+				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+				                <!--Pinterest-->
+				                <a class="icons-sm pin-ic"><i class="fa fa-pinterest"> </i></a>
+				                <!--Instagram-->
+				                <a class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a>
+				            </div>
+				        </div>
+				        <div class="col-sm-3 col-xs-6">
+				            <div class="col-xs-12">
+			                    <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
+				            </div>
+				            <div class="col-xs-12 text-center">
+				                <h3>Reejh Gosh</h3>
+				                <h5>Back-end Developer</h5>
+				                <!--Facebook-->
+				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+				                <!--Twitter-->
+				                <a class="icons-sm tw-ic"><i class="fa fa-twitter"> </i></a>
+				                <!--Dribbble-->
+				                <a class="icons-sm drib-ic"><i class="fa fa-dribbble"> </i></a>
+				            </div>
+				        </div>
+				        <div class="col-sm-3 col-xs-6">
+				            <div class="col-xs-12">
+				                <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
+				            </div>
+				            <div class="col-xs-12 text-center">
+				                <h3>Sarah Melyah</h3>
+				                <h5>Back-end Developer</h5>
+				                <!--Google +-->
+				                <a class="icons-sm gplus-ic"><i class="fa fa-google-plus"> </i></a>
+				                <!--Facebook-->
+				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+				                <!--GitHub-->
+				                <a class="icons-sm git-ic"><i class="fa fa-github"> </i></a>
+				            </div>
+				        </div>
+				    </div>
+				</div>
+				</div>
 			</section>
-
-
         </div>
 
         <!-- /.row -->
