--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Devlar</title>
+    <link rel="shortcut icon" href="./img/logo.ico" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +91,7 @@
 			<section class="background">
 			 <p class="slide-info">about</p>
 				<div id="ci2-wrapper">
-					<p class="content-info" id="ci2"><span class="h1" style="color: white">Devlar</span> is a crew of designers and developers enthusiastic about technology. <br>We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive their design. </p>
+					<p class="content-info" id="ci2"><span class="h1" style="color: white">Devlar</span> is a crew of designers and developers enthusiastic about technology. <br>We are a development group looking to build fun and resourceful applications standing out in their quality and distinctive in their design. </p>
 				</div>
 				<div class="content-wrapper">
 					<img id="s8" src="img/s8.png">
@@ -138,7 +139,7 @@
 				<div id="ci2-wrapper">
 					<span id="css">Creative Space</span>
 					<p id="cs-info">Creative space is a platform for any form of creative artist or people in general to put together their portfolio and build up an audience at the same time.</p>
-					<span class="links"><a>Behance</a> · <a>GitHub</a></span>
+					<span class="links"><a target="_blank" href="https://www.behance.net/gallery/51593835/Creative-Space-UIUX-Design">Behance</a> · <a target="_blank" href="https://github.com/soumikcv/Space2.0">GitHub</a></span>
 				</div>
 				<div class="content-wrapper">
 					<img id="cs" src="img/cs.png">
@@ -153,47 +154,40 @@
 				    <div class="row">
 				        <div class="col-sm-3 col-xs-6">
 				            <div class="col-xs-12">
-				                <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
+				                <img class="img-responsive img-circle" src="./img/soumik.jpg">
 				            </div>
 				            <div class="col-xs-12 text-center">
 				                <h3>Soumik Sur</h3>
-				                <h5>Front-end Developer</h5>
+				                <h5>Full-stack Developer</h5>
 				                <!--Facebook-->
-				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+				                <a class="icons-sm fb-ic" href="https://in.linkedin.com/in/soumik-sur-ab5244128"><i class="fa fa-linkedin-square"> </i></a>
 				                <!--Twitter-->
-				                <a class="icons-sm tw-ic"><i class="fa fa-twitter"> </i></a>
+				                <a class="icons-sm tw-ic" href="https://www.behance.net/soumikcv"><i class="fa fa-behance"> </i></a>
 				                <!--GitHub-->
-				                <a class="icons-sm git-ic"><i class="fa fa-github"> </i></a>
+				                <a class="icons-sm git-ic" href="https://github.com/soumikcv/"><i class="fa fa-github"> </i></a>
 				            </div>
 				        </div>
 				        <div class="col-sm-3 col-xs-6">
 				            <div class="col-xs-12">
-			                    <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
+			                    <img class="img-responsive img-circle" src="./img/yash.jpg">
 				            </div>
 				            <div class="col-xs-12 text-center">
 				                <h3>Yash Anand</h3>
 				                <h5>Designer & Front-end Developer</h5>
-				                <!--Facebook-->
-				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
-				                <!--Pinterest-->
-				                <a class="icons-sm pin-ic"><i class="fa fa-pinterest"> </i></a>
-				                <!--Instagram-->
-				                <a class="icons-sm ins-ic"><i class="fa fa-instagram"> </i></a>
+				                <a class="icons-sm fb-ic" href="https://in.linkedin.com/in/yashanand1910"><i class="fa fa-linkedin-square"> </i></a>
+				                <a class="icons-sm pin-ic" href="https://www.behance.net/yashanand1910"><i class="fa fa-behance"> </i></a>
+				                <a class="icons-sm ins-ic" href="https://github.com/yashanand1910/"><i class="fa fa-github"> </i></a>
 				            </div>
 				        </div>
 				        <div class="col-sm-3 col-xs-6">
 				            <div class="col-xs-12">
-			                    <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
+			                    <img class="img-responsive img-circle" src="./img/reejh.jpg">
 				            </div>
 				            <div class="col-xs-12 text-center">
 				                <h3>Reejh Gosh</h3>
 				                <h5>Back-end Developer</h5>
-				                <!--Facebook-->
-				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
-				                <!--Twitter-->
-				                <a class="icons-sm tw-ic"><i class="fa fa-twitter"> </i></a>
-				                <!--Dribbble-->
-				                <a class="icons-sm drib-ic"><i class="fa fa-dribbble"> </i></a>
+				                <a class="icons-sm fb-ic" href="https://in.linkedin.com/in/reejh-ghosh-62b64b100"><i class="fa fa-linkedin-square"> </i></a>
+				                <a class="icons-sm drib-ic" href="https://github.com/r4reejh"><i class="fa fa-github"> </i></a>
 				            </div>
 				        </div>
 				        <div class="col-sm-3 col-xs-6">
@@ -201,18 +195,22 @@
 				                <img class="img-responsive img-circle" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg">
 				            </div>
 				            <div class="col-xs-12 text-center">
-				                <h3>Sarah Melyah</h3>
-				                <h5>Back-end Developer</h5>
-				                <!--Google +-->
-				                <a class="icons-sm gplus-ic"><i class="fa fa-google-plus"> </i></a>
-				                <!--Facebook-->
-				                <a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
-				                <!--GitHub-->
-				                <a class="icons-sm git-ic"><i class="fa fa-github"> </i></a>
+				                <h3>Sivateja</h3>
+				                <h5>Mobile App Developer</h5>
+				                <a class="icons-sm fb-ic" href="https://in.linkedin.com/in/sivateja-gollapudi-648549139"><i class="fa fa-linkedin-square"> </i></a>
+				                <a class="icons-sm drib-ic" href="https://github.com/TejaGollapudi"><i class="fa fa-github"> </i></a>
 				            </div>
 				        </div>
 				    </div>
+
 				</div>
+
+				</div>
+				<div class="contact-us">Lets start a project together<br><a href="mailto:contactus@devlar.in?Subject=Lets%20start%20a%20project">Get in touch with us</a> or <a href="https://www.upwork.com/agencies/~01af099f6aef29c60a">find us at upwork</a><br>
+					<span style="font-size: 20px;color: #333">
+					<a class="icons-sm fb-ic" href=""><i class="fa fa-linkedin-square"> </i></a>
+					<a class="icons-sm pin-ic" href="https://www.behance.net/devlar"><i class="fa fa-behance"> </i></a>
+					<a class="icons-sm ins-ic" href=""><i class="fa fa-github"> </i></a></span>
 				</div>
 			</section>
         </div>
